--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,25 @@
     "name": "dockaverger-server",
     "version": "1.0.0",
     "description": "Backend server for Dockaverger",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
         "axios": "^1.6.2",
-        "dotenv": "^16.3.1"
+        "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "sqlite3": "^5.1.7"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "jest": "^30.2.0",
+        "nodemon": "^3.0.2",
+        "supertest": "^7.1.4"
     }
 }
-
