feat: batch process to check for updates

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - PORT=3001
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - DATA_DIR=/data
+      - TZ=America/Chicago
     volumes:
       # Persist database outside codebase
       - ./data:/data
