--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,11 @@
         "react-scripts": "5.0.1",
         "axios": "^1.6.2"
     },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.5",
+        "@testing-library/react": "^14.1.2",
+        "@testing-library/user-event": "^14.5.1"
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
