--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "axios": "^1.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "axios": "^1.6.2"
+        "react-select": "^5.10.2"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.5",
@@ -38,4 +39,3 @@
     },
     "proxy": "http://localhost:3001"
 }
-
