--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dockaverger-client",
+    "name": "docked-client",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
