--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dockaverger",
+    "name": "docked",
     "version": "1.0.0",
     "description": "Docker app maintenance tool with Portainer integration",
     "main": "server/index.js",
