--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -227,10 +227,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ github.repository }}
           tags: |
             type=raw,value=${{ needs.version.outputs.version }}
-            type=raw,value=latest,enable={{is_default_branch}}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+          flavor: |
+            latest=false
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -304,8 +305,9 @@ jobs:
             ### Container Image
             ```bash
             docker pull ${{ env.REGISTRY }}/${{ github.repository }}:${{ needs.version.outputs.version }}
-            docker pull ${{ env.REGISTRY }}/${{ github.repository }}:latest
             ```
+            
+            **Note:** The `latest` tag is only created after manual promotion via the "Promote Dev to Latest" workflow.
             
             ## 📚 Documentation
             
