--- a/.github/workflows/promote-to-latest.yml
+++ b/.github/workflows/promote-to-latest.yml
@@ -24,6 +24,39 @@ jobs:
       contents: write
       packages: write
     steps:
+      - name: Check repository permissions
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: user } = await github.rest.users.getAuthenticated();
+            const { data: repo } = await github.rest.repos.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            
+            // Check if user is owner
+            const isOwner = repo.owner.login.toLowerCase() === user.login.toLowerCase();
+            
+            // Check if user has admin permissions
+            let hasAdmin = false;
+            try {
+              const { data: permissions } = await github.rest.repos.getCollaboratorPermissionLevel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                username: user.login
+              });
+              hasAdmin = permissions.permission === 'admin';
+            } catch (error) {
+              // If we can't check permissions, assume not admin
+              hasAdmin = false;
+            }
+            
+            if (!isOwner && !hasAdmin) {
+              core.setFailed('Only repository owners and admins can promote to latest. You must be the repository owner or have admin permissions.');
+            }
+            
+            core.info(`User ${user.login} is ${isOwner ? 'owner' : hasAdmin ? 'admin' : 'not authorized'}`);
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -71,97 +104,88 @@ jobs:
         if: github.event.inputs.create_release == 'true'
         run: npm install
 
-      - name: Get current version and determine release tag
+      - name: Get version from latest dev tag
         id: version
         if: github.event.inputs.create_release == 'true'
         run: |
-          # Get current version from package.json
-          BASE_VERSION=$(node -p "require('./package.json').version")
-          echo "base_version=$BASE_VERSION" >> $GITHUB_OUTPUT
-          
-          # Fetch all tags to find the latest -latest tag
+          # Fetch all tags
           git fetch --tags --force
           
-          # Find all existing -latest tags and extract their base versions
-          LATEST_TAG=$(git tag -l "*-latest" | sort -V | tail -1)
+          # Find the latest dev tag (e.g., v1.0.3-dev)
+          LATEST_DEV_TAG=$(git tag -l "*-dev" | sort -V | tail -1)
           
-          if [ -z "$LATEST_TAG" ]; then
-            # No existing -latest tag, use current version
-            TAG_NAME="v${BASE_VERSION}-latest"
-            RELEASE_VERSION="$BASE_VERSION"
-            echo "No existing -latest tag found, using base version: $BASE_VERSION"
-          else
-            # Extract version from latest tag (e.g., v1.0.0-latest -> 1.0.0)
-            LATEST_VERSION=$(echo "$LATEST_TAG" | sed 's/v\(.*\)-latest/\1/')
-            echo "Latest -latest tag: $LATEST_TAG (version: $LATEST_VERSION)"
-            
-            # Use semver to compare and increment versions
-            RELEASE_VERSION=$(node -e "
-              const semver = require('semver');
-              const baseVersion = '$BASE_VERSION';
-              const latestVersion = '$LATEST_VERSION';
-              
-              // Compare versions - if current version is newer, use it; otherwise increment patch
-              if (semver.gt(baseVersion, latestVersion)) {
-                console.log(baseVersion);
-              } else {
-                // Increment patch version from latest tag
-                console.log(semver.inc(latestVersion, 'patch'));
-              }
-            ")
-            
-            # Determine which version was used for logging
-            if [ "$RELEASE_VERSION" = "$BASE_VERSION" ]; then
-              echo "Current version ($BASE_VERSION) is newer than latest tag ($LATEST_VERSION), using current version"
-            else
-              echo "Incrementing patch version: $LATEST_VERSION -> $RELEASE_VERSION"
-            fi
-            
-            TAG_NAME="v${RELEASE_VERSION}-latest"
+          if [ -z "$LATEST_DEV_TAG" ]; then
+            echo "❌ Error: No dev tag found. Please ensure a dev pre-release has been created first."
+            exit 1
           fi
           
+          # Extract version from dev tag (e.g., v1.0.3-dev -> 1.0.3)
+          RELEASE_VERSION=$(echo "$LATEST_DEV_TAG" | sed 's/^v\(.*\)-dev$/\1/')
+          TAG_NAME="v${RELEASE_VERSION}"
+          
+          echo "Latest dev tag: $LATEST_DEV_TAG"
+          echo "Release version: $RELEASE_VERSION"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
           echo "Final tag: $TAG_NAME (version: $RELEASE_VERSION)"
+
+      - name: Tag and push Docker images
+        if: github.event.inputs.create_release == 'true'
+        run: |
+          # Pull the dev image
+          docker pull ${{ env.REGISTRY }}/${{ github.repository }}:dev
+          
+          # Tag it as both version and latest
+          docker tag ${{ env.REGISTRY }}/${{ github.repository }}:dev ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.version.outputs.release_version }}
+          docker tag ${{ env.REGISTRY }}/${{ github.repository }}:dev ${{ env.REGISTRY }}/${{ github.repository }}:latest
+          
+          # Push both tags
+          docker push ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.version.outputs.release_version }}
+          docker push ${{ env.REGISTRY }}/${{ github.repository }}:latest
+          
+          echo "✓ Successfully tagged and pushed images: ${{ steps.version.outputs.release_version }} and latest"
 
       - name: Get commits since previous release
         id: commits
         if: github.event.inputs.create_release == 'true'
         run: |
-          # Find the previous -latest tag or the latest regular release tag
-          PREVIOUS_LATEST_TAG=$(git tag -l "*-latest" | sort -V | tail -1)
-          PREVIOUS_RELEASE_TAG=$(git tag -l "v*" | grep -v "latest" | sort -V | tail -1)
+          # Find the latest formal release tag (excluding dev and latest tags)
+          PREVIOUS_RELEASE_TAG=$(git tag -l "v*" | grep -v "dev" | grep -v "latest" | sort -V | tail -1)
           
           # Determine which tag to use as the base
-          if [ -n "$PREVIOUS_LATEST_TAG" ]; then
-            # Use the previous -latest tag if it exists
-            BASE_TAG="$PREVIOUS_LATEST_TAG"
-            echo "Using previous -latest tag: $BASE_TAG"
-          elif [ -n "$PREVIOUS_RELEASE_TAG" ]; then
-            # Otherwise use the latest regular release tag
+          if [ -n "$PREVIOUS_RELEASE_TAG" ]; then
             BASE_TAG="$PREVIOUS_RELEASE_TAG"
             echo "Using previous release tag: $BASE_TAG"
           else
-            # No previous tags, use the initial commit
             BASE_TAG=""
-            echo "No previous tags found, using all commits"
+            echo "No previous release tags found, using all commits"
           fi
           
-          # Get commits between BASE_TAG and HEAD
+          # Get commits between BASE_TAG and HEAD, filtering for conventional commits only (exclude merge commits)
+          # Pattern matches: type(scope): or type: (with optional scope)
           if [ -z "$BASE_TAG" ]; then
-            COMMITS=$(git log --pretty=format:"- %s ([%h](https://github.com/${{ github.repository }}/commit/%H))" --reverse)
+            COMMITS=$(git log --pretty=format:"%s|%h|%H" --reverse | grep -E "^(feat|fix|docs|style|refactor|perf|test|chore|ci|build|revert)(\([^)]+\))?:" | head -50)
           else
-            COMMITS=$(git log ${BASE_TAG}..HEAD --pretty=format:"- %s ([%h](https://github.com/${{ github.repository }}/commit/%H))" --reverse)
+            COMMITS=$(git log ${BASE_TAG}..HEAD --pretty=format:"%s|%h|%H" --reverse | grep -E "^(feat|fix|docs|style|refactor|perf|test|chore|ci|build|revert)(\([^)]+\))?:")
           fi
           
           if [ -z "$COMMITS" ]; then
-            COMMITS="- No new commits since previous release"
+            COMMITS_LIST="- No conventional commits since previous release"
+          else
+            COMMITS_LIST=$(echo "$COMMITS" | while IFS='|' read -r subject hash fullhash; do
+              echo "- $subject ([${hash:0:7}](https://github.com/${{ github.repository }}/commit/$fullhash))"
+            done)
           fi
           
-          # Store in output (escape newlines for GitHub Actions)
+          # Store in output
           echo "commits<<EOF" >> $GITHUB_OUTPUT
-          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "$COMMITS_LIST" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
+          
+          # Also get previous release tag for changelog link
+          if [ -n "$PREVIOUS_RELEASE_TAG" ]; then
+            echo "previous_tag=$PREVIOUS_RELEASE_TAG" >> $GITHUB_OUTPUT
+          fi
 
       - name: Create GitHub Release
         if: github.event.inputs.create_release == 'true'
@@ -173,21 +197,30 @@ jobs:
           RELEASE_NAME="v$RELEASE_VERSION"
           RELEASE_DATE=$(date -u +'%Y-%m-%d %H:%M:%S UTC')
           
-          RELEASE_BODY=$(cat <<EOF
-          This release marks the promotion of the **dev** image to **latest** after testing.
+          # Create changelog link
+          if [ -n "${{ steps.commits.outputs.previous_tag }}" ]; then
+            CHANGELOG_LINK="[Full Changelog](https://github.com/${{ github.repository }}/compare/${{ steps.commits.outputs.previous_tag }}...${TAG_NAME})"
+          else
+            CHANGELOG_LINK="[Full Changelog](https://github.com/${{ github.repository }}/commits/${TAG_NAME})"
+          fi
           
-          **Docker Image:** \`${{ env.REGISTRY }}/${{ github.repository }}:latest\`
+          RELEASE_BODY=$(cat <<EOF
+          **Docker Images:**
+          - \`${{ env.REGISTRY }}/${{ github.repository }}:$RELEASE_VERSION\`
+          - \`${{ env.REGISTRY }}/${{ github.repository }}:latest\`
           
           **Promoted by:** @${{ github.actor }}
           **Promoted at:** $RELEASE_DATE
-          
-          This image has been tested and verified as stable.
           
           ---
           
           ## 📝 Commits in This Release
           
           ${{ steps.commits.outputs.commits }}
+          
+          ---
+          
+          $CHANGELOG_LINK
           EOF
           )
           
@@ -199,17 +232,18 @@ jobs:
           echo "✓ Created GitHub release: $TAG_NAME"
 
       - name: Get image info
+        if: github.event.inputs.create_release == 'true'
         run: |
           echo "## Promotion Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Successfully promoted **dev** to **latest**" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ env.REGISTRY }}/${{ github.repository }}:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Docker Images:**" >> $GITHUB_STEP_SUMMARY
+          echo "- \`${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.version.outputs.release_version }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`${{ env.REGISTRY }}/${{ github.repository }}:latest\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          if [ "${{ github.event.inputs.create_release }}" == "true" ]; then
-            echo "**GitHub Release:** Created [${{ steps.version.outputs.tag_name }}](https://github.com/${{ github.repository }}/releases/tag/${{ steps.version.outputs.tag_name }})" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-          fi
+          echo "**GitHub Release:** Created [${{ steps.version.outputs.tag_name }}](https://github.com/${{ github.repository }}/releases/tag/${{ steps.version.outputs.tag_name }})" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Promoted by:** @${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
           echo "**Promoted at:** $(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
 
