--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -45,27 +45,78 @@ jobs:
           # Find the latest formal release tag (e.g., v1.0.3)
           LATEST_RELEASE_TAG=$(git tag -l "v*" | grep -v "dev" | grep -v "latest" | sort -V | tail -1)
           
-          if [ -z "$LATEST_DEV_TAG" ] && [ -z "$LATEST_RELEASE_TAG" ]; then
-            # No existing tags, use current version
-            DEV_VERSION="$BASE_VERSION"
-            echo "No existing tags found, using base version: $BASE_VERSION"
-          elif [ -n "$LATEST_DEV_TAG" ]; then
-            # Extract version from latest dev tag (e.g., v1.0.3-dev -> 1.0.3)
-            LATEST_DEV_VERSION=$(echo "$LATEST_DEV_TAG" | sed 's/^v\(.*\)-dev$/\1/')
-            echo "Latest dev tag: $LATEST_DEV_TAG (version: $LATEST_DEV_VERSION)"
-            
-            # Use semver to increment patch version
-            DEV_VERSION=$(node -e "const semver = require('semver'); console.log(semver.inc('$LATEST_DEV_VERSION', 'patch'));")
-            echo "Incrementing dev version: $LATEST_DEV_VERSION -> $DEV_VERSION"
+          # Determine base version and tag to compare against
+          if [ -n "$LATEST_DEV_TAG" ]; then
+            BASE_VERSION_FOR_COMPARE=$(echo "$LATEST_DEV_TAG" | sed 's/^v\(.*\)-dev$/\1/')
+            BASE_TAG_FOR_COMPARE="$LATEST_DEV_TAG"
+            echo "Latest dev tag: $LATEST_DEV_TAG (version: $BASE_VERSION_FOR_COMPARE)"
+          elif [ -n "$LATEST_RELEASE_TAG" ]; then
+            BASE_VERSION_FOR_COMPARE=$(echo "$LATEST_RELEASE_TAG" | sed 's/^v//')
+            BASE_TAG_FOR_COMPARE="$LATEST_RELEASE_TAG"
+            echo "Latest release tag: $LATEST_RELEASE_TAG (version: $BASE_VERSION_FOR_COMPARE)"
           else
-            # Only formal release exists, increment from it
-            LATEST_RELEASE_VERSION=$(echo "$LATEST_RELEASE_TAG" | sed 's/^v//')
-            echo "Latest release tag: $LATEST_RELEASE_TAG (version: $LATEST_RELEASE_VERSION)"
-            
-            # Use semver to increment patch version
-            DEV_VERSION=$(node -e "const semver = require('semver'); console.log(semver.inc('$LATEST_RELEASE_VERSION', 'patch'));")
-            echo "Incrementing from release version: $LATEST_RELEASE_VERSION -> $DEV_VERSION"
+            BASE_VERSION_FOR_COMPARE="$BASE_VERSION"
+            BASE_TAG_FOR_COMPARE=""
+            echo "No existing tags found, using base version: $BASE_VERSION"
           fi
+          
+          # Use @semantic-release/commit-analyzer to determine version increment
+          INCREMENT_TYPE=$(node -e "
+            (async () => {
+              try {
+                const analyzeCommits = require('@semantic-release/commit-analyzer');
+                const { execSync } = require('child_process');
+                
+                const baseTag = '$BASE_TAG_FOR_COMPARE';
+                
+                // Get commits since base tag
+                const commitRange = baseTag ? \`\${baseTag}..HEAD\` : 'HEAD';
+                const commits = execSync(\`git log \${commitRange} --pretty=format:'%H|%s|%b' --reverse\`, { encoding: 'utf8' })
+                  .trim()
+                  .split('\\n')
+                  .filter(c => c.trim())
+                  .map(line => {
+                    const [hash, subject, ...bodyParts] = line.split('|');
+                    return {
+                      hash,
+                      message: subject + (bodyParts.length ? '\\n\\n' + bodyParts.join('\\n') : ''),
+                      gitTags: baseTag ? [baseTag] : []
+                    };
+                  });
+                
+                // Analyze commits
+                const result = await analyzeCommits({
+                  commits,
+                  logger: { log: () => {}, error: () => {} }
+                });
+                
+                // Map semantic-release result to increment type
+                if (result === null || result === false) {
+                  console.log('patch');
+                } else if (result === 'major') {
+                  console.log('major');
+                } else if (result === 'minor') {
+                  console.log('minor');
+                } else {
+                  console.log('patch');
+                }
+              } catch (err) {
+                console.log('patch'); // Default to patch on error
+              }
+            })();
+          " || echo "patch")
+          
+          # Clean and validate increment type
+          INCREMENT_TYPE=$(echo "$INCREMENT_TYPE" | tr -d '\n' | tr '[:upper:]' '[:lower:]')
+          if [ "$INCREMENT_TYPE" != "major" ] && [ "$INCREMENT_TYPE" != "minor" ] && [ "$INCREMENT_TYPE" != "patch" ]; then
+            INCREMENT_TYPE="patch"
+          fi
+          
+          echo "Recommended bump type: $INCREMENT_TYPE"
+          
+          # Use semver to increment version
+          DEV_VERSION=$(node -e "const semver = require('semver'); console.log(semver.inc('$BASE_VERSION_FOR_COMPARE', '$INCREMENT_TYPE'));")
+          echo "Incrementing $INCREMENT_TYPE version: $BASE_VERSION_FOR_COMPARE -> $DEV_VERSION"
           
           TAG_NAME="v${DEV_VERSION}-dev"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
@@ -154,12 +205,12 @@ jobs:
           RELEASE_NAME="v$DEV_VERSION-dev"
           RELEASE_DATE=$(date -u +'%Y-%m-%d %H:%M:%S UTC')
           
-          # Get previous release tag for changelog link
+          # Get previous release tag for changelog link (Sonarr format: v1.0.0...v1.0.1-dev)
           PREVIOUS_RELEASE_TAG=$(git tag -l "v*" | grep -v "dev" | grep -v "latest" | sort -V | tail -1)
           if [ -n "$PREVIOUS_RELEASE_TAG" ]; then
-            CHANGELOG_LINK="[Full Changelog](https://github.com/${{ github.repository }}/compare/${PREVIOUS_RELEASE_TAG}...${TAG_NAME})"
+            CHANGELOG_LINK="[${PREVIOUS_RELEASE_TAG}...${TAG_NAME}](https://github.com/${{ github.repository }}/compare/${PREVIOUS_RELEASE_TAG}...${TAG_NAME})"
           else
-            CHANGELOG_LINK="[Full Changelog](https://github.com/${{ github.repository }}/commits/${TAG_NAME})"
+            CHANGELOG_LINK="[${TAG_NAME}](https://github.com/${{ github.repository }}/commits/${TAG_NAME})"
           fi
           
           RELEASE_BODY=$(cat <<EOF
