--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -84,24 +84,75 @@ jobs:
                     };
                   });
                 
-                // Analyze commits
+                // Analyze commits with angular preset (conventional commits)
                 const result = await analyzeCommits({
                   commits,
-                  logger: { log: () => {}, error: () => {} }
+                  logger: { 
+                    log: (msg) => console.error('LOG:', msg),
+                    error: (msg) => console.error('ERROR:', msg)
+                  },
+                  options: {
+                    preset: 'angular'
+                  }
                 });
                 
+                console.error('Analysis result:', result, 'Type:', typeof result);
+                
                 // Map semantic-release result to increment type
+                // Result can be: null, false, 'major', 'minor', 'patch', or an object with releaseType
+                let incrementType = 'patch';
+                
                 if (result === null || result === false) {
-                  console.log('patch');
-                } else if (result === 'major') {
+                  incrementType = 'patch';
+                } else if (typeof result === 'string') {
+                  incrementType = result;
+                } else if (result && result.releaseType) {
+                  incrementType = result.releaseType;
+                } else if (result === 'major' || result === 'minor' || result === 'patch') {
+                  incrementType = result;
+                }
+                
+                console.log(incrementType);
+              } catch (err) {
+                console.error('Error analyzing commits:', err.message);
+                console.error('Stack:', err.stack);
+                // Fallback: manually analyze commits
+                let hasBreaking = false;
+                let hasFeat = false;
+                let hasFix = false;
+                
+                for (const commit of commits) {
+                  const msg = commit.message || '';
+                  const lines = msg.split('\\n');
+                  const subject = lines[0] || '';
+                  const body = lines.slice(1).join('\\n');
+                  
+                  // Check for breaking changes
+                  if (subject.match(/^[a-z]+(\(.+\))?!:/) || body.match(/BREAKING CHANGE/i)) {
+                    hasBreaking = true;
+                    break;
+                  }
+                  
+                  // Check for feat commits
+                  if (subject.match(/^feat(\(.+\))?:/)) {
+                    hasFeat = true;
+                  }
+                  
+                  // Check for fix commits
+                  if (subject.match(/^fix(\(.+\))?:/)) {
+                    hasFix = true;
+                  }
+                }
+                
+                if (hasBreaking) {
                   console.log('major');
-                } else if (result === 'minor') {
+                } else if (hasFeat) {
                   console.log('minor');
+                } else if (hasFix) {
+                  console.log('patch');
                 } else {
                   console.log('patch');
                 }
-              } catch (err) {
-                console.log('patch'); // Default to patch on error
               }
             })();
           " || echo "patch")
