--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "license": "MIT",
     "devDependencies": {
         "concurrently": "^8.2.2",
-        "semver": "^7.6.0",
-        "@semantic-release/commit-analyzer": "^11.1.0",
-        "conventional-changelog-angular": "^8.0.0"
+        "semver": "^7.6.0"
     }
 }
 
