--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -174,6 +174,8 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.version.outputs.dev_version }}-dev
             ${{ env.REGISTRY }}/${{ github.repository }}:dev
+          build-args: |
+            NODE_ENV=production
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
