--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -131,15 +131,16 @@ jobs:
       - name: Update version in package.json files
         run: |
           DEV_VERSION="${{ steps.version.outputs.dev_version }}"
-          echo "Updating version to $DEV_VERSION in all package.json files"
+          DEV_VERSION_WITH_SUFFIX="${DEV_VERSION}-dev"
+          echo "Updating version to $DEV_VERSION_WITH_SUFFIX in all package.json files"
           # Update root package.json
-          npm pkg set version="$DEV_VERSION"
+          npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
           # Update server package.json
-          cd server && npm pkg set version="$DEV_VERSION"
+          cd server && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
           # Update client package.json
-          cd ../client && npm pkg set version="$DEV_VERSION"
+          cd ../client && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
           cd ..
-          echo "✓ Version updated to $DEV_VERSION"
+          echo "✓ Version updated to $DEV_VERSION_WITH_SUFFIX"
 
       - name: Commit version update
         run: |
