--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
         "react-scripts": "5.0.1",
         "react-select": "^5.10.2"
     },
+    "overrides": {
+        "nth-check": "^2.1.1",
+        "webpack-dev-server": "^5.2.1"
+    },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.5",
         "@testing-library/react": "^14.1.2",
