--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.5",
         "@testing-library/react": "^14.1.2",
-        "@testing-library/user-event": "^14.5.1"
+        "@testing-library/user-event": "^14.5.1",
+        "yaml": "^2.8.1"
     },
     "scripts": {
         "start": "react-scripts start",
