--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     },
     "overrides": {
         "nth-check": "^2.1.1",
-        "webpack-dev-server": "^5.2.1"
+        "webpack-dev-server": "^5.2.1",
+        "js-yaml": "^4.1.1",
+        "postcss": "^8.4.31"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.5",
