--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,14 +49,14 @@ jobs:
   lint:
     uses: ./.github/workflows/reusable/run-linting.yml
     with:
-      node-version: ${{ env.NODE_VERSION }}
+      node-version: '18'
       check-formatting: true
 
   # Run tests with coverage
   test:
     uses: ./.github/workflows/reusable/run-tests.yml
     with:
-      node-version: ${{ env.NODE_VERSION }}
+      node-version: '18'
       run-coverage: true
       upload-coverage: ${{ github.event_name == 'push' }}
 
